--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gunjan</title>
   </head>
-  <body>
-    <h1>Site is Under Construction</h1>
+  <body style="background-color: #202020">
+    <h1 style="color: #ececec">Site is Under Construction</h1>
   </body>
 </html>
