--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gunjan</title>
   </head>
-  <body style="background-color: #202020">
+  <body
+    style="
+      background-color: #202020;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    "
+  >
     <h1 style="color: #ececec">Site is Under Construction</h1>
   </body>
 </html>
