--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 100%;
+      height: 100%;
     "
   >
     <h1 style="color: #ececec">Site is Under Construction</h1>
