--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
     "
   >
     <h1 style="color: #ececec">Site is Under Construction</h1>
